Replace family tablet integration with standalone UI

--- a/client_packages/browser/index.html
+++ b/client_packages/browser/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" type="text/css" href="css/auth.css" />
     <link rel="stylesheet" type="text/css" href="css/loader.css" />
     <link rel="stylesheet" type="text/css" href="css/interactionMenu.css" />
+    <link rel="stylesheet" type="text/css" href="css/families.css" />
     <link rel="stylesheet" type="text/css" href="css/inputWindow.css" />
     <link rel="stylesheet" type="text/css" href="css/selectionWindow.css" />
     <link rel="stylesheet" type="text/css" href="css/acceptWindow.css" />
@@ -39,6 +40,7 @@
     <link rel="stylesheet" type="text/css" href="css/materialsTimer.css"/>
     <link rel="stylesheet" type="text/css" href="css/gungame.css"/>
     <script src="js/main.js"></script>
+    <script src="js/familiesUI.js"></script>
 
     <!-- development version, includes helpful console warnings -->
     <!-- <script src="js/vue-development.js"></script> -->
